Bug 1467847 - avoid taking inverse in Polygon::TransformToScreenSpace when possible. r=miko